<resources>
    <string name="app_name">Everything</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="follow">FOLLOW</string>
    <string name="unfollow">UNFOLLOW</string>

    <string name="tab1">HOME</string>
    <string name="tab2">POST</string>
    <string name="tab3">PROFILE</string>
</resources>
