<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/rootLayoutSignup"
    tools:context="com.example.ketanpandey.everything.signUp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signupLayout"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/userNameSignup"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/username_hint"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordSignup"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordSignupRetype"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/retype_password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signupButton"
        android:text="@string/signup_button"/>


</RelativeLayout>
