<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/rootLayoutSignin"
    tools:context="com.example.ketanpandey.everything.signIn">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginLayout"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/userName"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/username_hint"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pass"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginButton"
        android:text="@string/login_button"/>

</RelativeLayout>
